k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: skillpulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dev7878/skillpulse-backend:d50b54d155a64d335c882f882efb5dcc9ba685b8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 60m
              memory: 32Mi
            limits:
              cpu: 70m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: skillpulse
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  template:
    spec:
      containers:
        - image: dev7878/skillpulse-backend:d50b54d155a64d335c882f882efb5dcc9ba685b8
